@@ -17,6 +17,9 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for CVS:
 
+plugin_logger/plugin_logger.c: make it compile under Win32.
+Ryo 2005-07-30
+
 server/player.c: fix crash when news or rules > HUGE_BUF.
 Ryo 2005-07-29
 
